Corrected spacing between right header icons and avatar

--- a/src/Header.css
+++ b/src/Header.css
@@ -40,5 +40,9 @@
 
 .header__right {
   display: flex;
+}
+
+.header__right__avatar {
   padding-right: 20px;
+  padding-left: 10px;
 }
